--- a/Prueba-Angular/src/app/cuotas/cuotas.component.html
+++ b/Prueba-Angular/src/app/cuotas/cuotas.component.html
@@ -3,7 +3,7 @@
     <p>Cuota {{ index + 1 }}:</p>
     <ul>
       <li>Cuota: {{ e.cuota }}</li>
-      <li>Pago: {{ e.pago }}</li>
+      <li>Tiene que pagar cada: {{ e.pago }} dias</li>
     </ul>
   </div>
   
