--- a/Prueba-Angular/src/app/app.component.html
+++ b/Prueba-Angular/src/app/app.component.html
@@ -1,17 +1,22 @@
-<!-- prueba-ventas.component.html -->
-<div style="display: flex; height: 100vh;">
-    <div style="margin-left: 100px; margin-top: 60px;">
-      <h2 style="text-align: center;">Calculos</h2>
-      <app-tabla></app-tabla>
-    </div>
-    <div style="margin-left: 50px; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%;">
-      <div style="background-color: #B5B2B2; width: 600px; padding: 20px; margin-top: 30px;">
-        <app-formulario></app-formulario>
-        <app-cuotas></app-cuotas>
-      </div>
-    </div>
-    <div>
-      
+
+<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+  <div class="container-fluid">
+    <h3 class="text-light">Bienvenido Danilo</h3>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link " aria-current="page"[routerLink]="['/home']">Inicio</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link"[routerLink]="['/AppVentas']" >Ventas</a>
+        </li>
+      </ul>
     </div>
   </div>
-  
+</nav>
+
+<router-outlet></router-outlet>
